--- a/index.html
+++ b/index.html
@@ -1,11 +1,80 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Realty Miami</title>
+  <meta charset="UTF-8">
+  <title>RealtyMiami</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    body { font-family: Arial, sans-serif; margin: 0; padding: 0; background: #f4f4f4; color: #333; }
+    header { background: #0077cc; color: white; padding: 40px 20px; text-align: center; }
+    h1 { margin-top: 0; font-size: 36px; }
+    h2.section-title { color: #0077cc; font-size: 24px; margin-top: 40px; }
+    section { padding: 20px; max-width: 900px; margin: auto; background: white; margin-bottom: 20px; border-radius: 8px; }
+    .cta { background: #0077cc; color: white; padding: 12px 24px; display: inline-block; margin-top: 15px; text-decoration: none; border-radius: 4px; }
+    footer { background: #222; color: white; text-align: center; padding: 20px 10px; font-size: 14px; }
+    .icons a { margin: 0 10px; display: inline-block; }
+    .icons img { width: 32px; vertical-align: middle; }
+    .about-photo { width: 150px; border-radius: 50%; margin-right: 20px; float: left; }
+    .about-container { overflow: auto; }
+  </style>
 </head>
 <body>
-    <h1>Welcome to Realty Miami!</h1>
+
+<header>
+  <h1>Discover Miami's Best New Developments</h1>
+  <p>Exclusive access to pre-construction deals</p>
+  <a href="https://wa.me/" class="cta">Join VIP WhatsApp</a>
+</header>
+
+<section>
+  <h2 class="section-title">Why Invest in Pre-Construction?</h2>
+  <ul>
+    <li>High ROI & Developer Incentives</li>
+    <li>Flexible Payment Plans</li>
+    <li>Perfect for International Buyers</li>
+  </ul>
+</section>
+
+<section>
+  <h2 class="section-title">Great Deals</h2>
+  <p>Opportunities with at least 15% discount on sqft value.</p>
+</section>
+
+<section>
+  <h2 class="section-title">Search Rentals</h2>
+  <form>
+    <input type="text" placeholder="Neighborhood or Zip" />
+    <input type="submit" value="Search" />
+  </form>
+</section>
+
+<section>
+  <h2 class="section-title">Market Updates</h2>
+  <ul>
+    <li>Miami Beach – Trends & Insights</li>
+    <li>Surfside – New Opportunities</li>
+    <li>Sunny Isles – Luxury Pipeline</li>
+  </ul>
+</section>
+
+<section>
+  <h2 class="section-title">About RealtyMiami</h2>
+  <div class="about-container">
+    <img src="https://via.placeholder.com/150" alt="Your Photo" class="about-photo" />
+    <p>Led by a trusted local expert, RealtyMiami is the go-to brand for investors, buyers and sellers across Miami Beach and beyond. With deep market knowledge and a passion for real estate, we deliver unmatched value and personal attention to each client.</p>
+  </div>
+</section>
+
+<section class="icons" style="text-align:center;">
+  <a href="https://wa.me/"><img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WhatsApp"></a>
+  <a href="https://instagram.com"><img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" alt="Instagram"></a>
+  <a href="https://youtube.com"><img src="https://cdn-icons-png.flaticon.com/512/1384/1384060.png" alt="YouTube"></a>
+</section>
+
+<footer>
+  RealtyMiami.us © 2025 | <a href="https://wa.me/" style="color:white;">WhatsApp</a>
+</footer>
+
 </body>
 </html>
