--- a/index.html
+++ b/index.html
@@ -47,14 +47,21 @@
                     </div>
                     
                     <div class="form-group">
-                        <label for="language">Preferred Language</label>
-                        <select id="language" name="language" required>
-                            <option value="English">English</option>
-                            <option value="Spanish">Spanish</option>
-                            <option value="Portuguese">Portuguese</option>
-                            <option value="French">French</option>
-                            <option value="Other">Other</option>
-                        </select>
+                        <label>Preferred Language(s)</label>
+                        <div class="checkbox-group">
+                            <label class="checkbox-container">
+                                <input type="checkbox" name="language" value="English" checked>
+                                <span class="checkbox-label">English</span>
+                            </label>
+                            <label class="checkbox-container">
+                                <input type="checkbox" name="language" value="Spanish">
+                                <span class="checkbox-label">Spanish</span>
+                            </label>
+                            <label class="checkbox-container">
+                                <input type="checkbox" name="language" value="Portuguese">
+                                <span class="checkbox-label">Portuguese</span>
+                            </label>
+                        </div>
                     </div>
                     
                     <div class="form-group">
